get user following and followers
